<resources>
    <string name="app_name">Minha Composição</string>
    <string name="texto_tela_inicial_praticante">Clicando acima você poderá analisar como estão sendo os resultados do seu treino</string>
    <string name="texto_tela_inicial_professores">Clicando acima você poderá acompanhar os resultados do seu trabalho!</string>
    <string name="texto_botao_praticantes">Para Praticantes de Atividades físicas/exercícios</string>
    <string name="texto_botao_professores">Para Profissionais de Educação Física</string>
    <string name="texto_criar_conta">Ainda não possui uma conta? Clique aqui e cadastre-se!</string>
    <string name="instrucoes_cadastro_usuario">Insira abaixo as informações que são solicitadas, logo em seguida, toque no botão CONFIRMAR</string>
    <string name="titulo_botao_historico_praticante">Histórico</string>
    <string-array name="Sexos">
        <item>Macho</item>
        <item>Fêmea</item>
        <item>Outro</item>
    </string-array>
    <string-array name="Ocupacao">
        <item>Profissional de Educação Física</item>
        <item>Praticante de atividades físicas/exercícios</item>
    </string-array>
    <string name="title_activity_principal_praticante">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="texto_botton_bar_historico">Histórico</string>
    <string name="texto_botton_bar_antropometria">Antropometria</string>
    <string name="texto_botton_bar_outras_medidas">Outras Medidas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instrucao_calculo_imc">Para calcular o seu índice de massa corpórea (IMC) é muito simples! Basta inserir abaixo a sua massa (em kg) e a sua estatura (em metros), logo em seguida clicar em CALCULAR, e calcularemos para você!</string>
    <string name="texto_botao_entrada_massa">Massa corporal, ex: 65.0</string>
    <string name="texto_botao_entrada_estatura">Estatura, ex: 1.68</string>
    <string name="texto_botao_calcular_imc">Calcular</string>
    <string name="orientacao_calculo_rcq">Para calcular sua razão cintura-quadril é muito fácil! basta preencher os campos abaixo e clicar em CALCULAR!</string>
    <string-array name="Sexos_calculos_dobras">
        <item>Macho</item>
        <item>Fêmea</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer </string>
    <string name="title_activity_coxa_proximal_e_panturrilhas_diferentes">
        CoxaProximalEPanturrilhasDiferentes
    </string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>