<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".View.Activities.CalculoImcActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/colorPrimaryDark"
        app:srcCompat="@drawable/background_app" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:gravity="center"
                android:text="@string/instrucao_calculo_imc"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/formato_botoes_tela_calculo_imc"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    app:srcCompat="@drawable/homem_se_pesando"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0.3dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/entrada_massa_corporal"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/formato_botoes_tela_calculo_imc"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/texto_botao_entrada_massa"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="#D50000"
                    android:textColorHint="#D50000"
                    android:textSize="25sp"
                    android:layout_marginBottom="0.3dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/formato_botoes_tela_calculo_imc"
                android:layout_margin="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    app:srcCompat="@drawable/homem_se_medindo"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0.3dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/entrada_estatura"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/formato_botoes_tela_calculo_imc"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/texto_botao_entrada_estatura"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="#D50000"
                    android:textColorHint="#D50000"
                    android:textSize="25sp"
                    android:layout_marginBottom="0.3dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botao_calcular_imc"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/formato_botoes_tela_calculo_imc"
                android:text="@string/texto_botao_calcular_imc"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>